# silk

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  skills-lock.json  vite.config.ts
.serena/: project.yml
src-tauri/: Cargo.toml  package-lock.json  tauri.conf.json
src-tauri/.sqlx/: query-0b59dd6e72c3db234a7a67a1a97ad758a04496a7fd17f5b306a8fd897ee11037.json  query-4f612fe15937cfbc5452c91a04966c0970475827371c1d67c77eaa2b52a5c6df.json  query-81aa3c880af05c7f04bd75c52cf5a956deea0499e2aa58b2ce86748670ab5f5e.json  query-abee8bd70ddcb9b7f63a1b08c2841484399d6a502a1f2a20300f98d4c364dd48.json  query-c3be91c5b31041f6709d735ea725a4cb7cd4b032f697a31fbffe74ae718aec07.json  query-ee7720cae58a32f4c629865c2f36edf2f01f9868299bd10185a7a032458a859d.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260626100100_create_providers.sql  20260626100200_create_routing_rules.sql  20260626100300_create_request_logs.sql  20260626100400_create_gateway_settings.sql  20260626100500_expand_gateway_schema.sql  20260626100600_create_provider_groups.sql  20260626100700_create_model_mappings.sql  20260626100800_add_rate_limit_settings.sql  20260626100900_create_gateway_keys.sql  20260627101000_add_protocols_field.sql  20260627110000_add_models_field.sql  20260627210000_add_keys_field.sql  20260627220000_drop_model_name.sql  20260627230000_drop_api_key.sql  20260627235000_add_key_strategy.sql  20260628100000_expand_model_mappings.sql  20260628110000_create_model_mapping_channels.sql  20260628120000_clear_legacy_encrypted_keys.sql  (+15 more)
(+134 files in other folders)
