[package]
name = "silk"
version = "0.2.0"
description = "Silk 丝路 — 纯本地桌面 AI 多模型中转客户端"
authors = ["morning-start"]
edition = "2021"

[lib]
name = "silk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 加密
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# 错误处理
thiserror = "2"
async-trait = "0.1"

# HTTP 客户端（网关转发用，Phase 2 需要）
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "socks"] }

# HTTP 服务端（Phase 2 需要）
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# SSE 客户端（Phase 2 需要）
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"

# 并发容器（Route Manager 用）
dashmap = "6"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# LLM 协议转换
linguafranca = "0.3"
